# spotify_playlist

./: .gitignore  README.md  pyproject.toml
spotify_playlist/: get_artists.py  get_tracks.py  in_out.py
spotify_playlist/api/: spotify.py
spotify_playlist/datasets/: artists.py  tracks.py
tests/: test_artists.py  test_functional.py  test_in_out.py  test_spotify_playlist.py  test_tracks.py
tests/api/: test_spotify.py
