[tool.poetry]
name = "spotify_playlist"
version = "0.1.0"
description = ""
authors = ["scauglog <4425250+scauglog@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.4"
requests = "2.28.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
